--- a/Image Segmentation.ipynb
+++ b/Image Segmentation.ipynb
@@ -62,6 +62,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how many dominant colors do you want the image to be converted to 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = int(input('how many dominant colors do you want the image to be converted to '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters = {}\n",
+    "\n",
+    "for kx in range(k):\n",
+    "    \n",
+    "    center = 255*np.random.random((3,1))\n",
+    "    points = []\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
