--- a/Image Segmentation.ipynb
+++ b/Image Segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,26 +87,84 @@
     "\n",
     "for kx in range(k):\n",
     "    \n",
-    "    center = 255*np.random.random((3,1))\n",
+    "    center = 255*np.random.random((3,))\n",
     "    points = []\n",
+    "    cluster={\n",
+    "        'center':center,\n",
+    "        'points':points\n",
+    "    }\n",
     "    \n",
-    "    \n",
-    "    "
+    "    clusters[kx] = cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'center': array([106.01290414, 248.19148938, 216.7770028 ]), 'points': []}, 1: {'center': array([179.18967783, 235.1431249 ,  47.94595031]), 'points': []}, 2: {'center': array([  2.99893791, 164.16701579, 122.52594035]), 'points': []}, 3: {'center': array([252.34076421, 136.75991985, 194.9024126 ]), 'points': []}, 4: {'center': array([214.30883968, 178.74278448, 130.44177734]), 'points': []}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(clusters)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(330, 500, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(img.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Distance(v1,v2):\n",
+    "    return np.sum((v1-v2)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Estep(clusters):\n",
+    "    \n",
+    "    for i in range(X.shape[0]):\n",
+    "        \n",
+    "        for j in range(X.shape[1]):\n",
+    "                \n",
+    "                pts = img[i][j]\n",
+    "                distance = []\n",
+    "                \n",
+    "                for kx in range(k):\n",
+    "                    dist = Distance(pts,clusters[kx]['center'])\n",
+    "                    distance.append(dist)\n",
+    "                    \n",
+    "                cluster = np.argmin(distance)\n",
+    "                \n",
+    "                clusters[cluster]['points'].append(pts)\n",
+    "                "
+   ]
   },
   {
    "cell_type": "code",
