--- a/Image Segmentation.ipynb
+++ b/Image Segmentation.ipynb
@@ -168,10 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Mstep(clusters):\n",
+    "    \n",
+    "    for kx in range(k):\n",
+    "        \n",
+    "        pts = clusters[kx]['points']\n",
+    "        try:\n",
+    "            new_mean = np.mean(pts,axis=0)\n",
+    "            clusters[kx]['center'] = new_mean\n",
+    "            clusters[kx]['points'] = []\n",
+    "        except:\n",
+    "            pass\n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
